@@ -33,11 +33,13 @@
 
         .data
 msg:   .asciiz "Hello World"
+	.extern foobar 4
 
         .text
         .globl main
 main:   li $v0, 4       # syscall 4 (print_str)
         la $a0, msg     # argument: string
         syscall         # print the string
-
+        lw $t1, foobar
+        
         jr $ra          # retrun to caller
