@@ -1,5 +1,8 @@
 2013-03-23    <JIM@LS-RED>
 
+	* CPU/data.c (extern_directive) [ https://sourceforge.net/p/spimsimulator/bugs/44/]:
+	Multiple instance of extern directive resolved to distinct locations.
+
 	* CPU/inst.c (i_type_inst_full_word) [https://sourceforge.net/p/spimsimulator/feature-requests/11/]:
 	LW/SW of 0x8000..0xffff generated incorrect code.
 
